--- a/templates/EduMe/index.html
+++ b/templates/EduMe/index.html
@@ -1,90 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Homepage</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+{% extends "EduMe/base.html" %}
+{% block title %} Home Page {% endblock %}
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  </head>
-  <body>
+{% block body_block %}
+<div class="jumbotron">
+  <h1>Django Level Five</h1>
 
-
-
-        <!-- right-hand attempt #1 -->
-          <!-- <ul class="nav navbar-nav flex-row justify-content-between">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          </ul> -->
-
-        <!-- right-hand attempt #2 -->
-          <!-- <div class="pull-right">
-
-            <ul class="nav navbar-nav flex-row justify-content-between pull-right">
-                  <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
-                  <li class="dropdown order-1"></li>
-                      <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle pull-right">Login <span class="caret"></span></button>
-                      <ul class="dropdown-menu dropdown-menu-right mt-2">
-                         <li class="px-3 py-2">
-                             <form class="form" role="form">
-                                  <div class="form-group">
-                                      <input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
-                                  </div>
-                                  <div class="form-group">
-                                      <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
-                                  </div>
-                                  <div class="form-group">
-                                      <button type="submit" class="btn btn-primary btn-block">Login</button>
-                                  </div>
-                                  <div class="form-group text-center">
-                                      <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small>
-                                  </div>
-                              </form>
-                          </li>
-                      </ul>
-            </ul>
-
-          </div> -->
-
-          <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-          <a class="navbar-brand" href="#">Navbar</a>
-
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-
-              <li class="dropdown order-1">
-                    <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right mt-1">
-                      <li class="p-3">
-                            <form class="form" role="form">
-                                <div class="form-group">
-                                    <input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
-                                </div>
-                                <div class="form-group">
-                                    <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block">Login</button>
-                                </div>
-                                <div class="form-group text-xs-center">
-                                    <small><a href="#">Forgot password?</a></small>
-                                </div>
-                            </form>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-          </div>
-        </nav>
-
-
-
-  </body>
-</html>
+</div>
+{% endblock %}
