- edited channel registration page
next:
-finish up the registration page
-check the urls
-add buttons to navbar in base.html

...next.next:
1-add profile decoration to channels
2-or research adding media platform (CSS & JavaScript)
3-Lesson reviews
4-courses views

--- a/templates/EduControl/broadcast_station.html
+++ b/templates/EduControl/broadcast_station.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Instructor Broadcast Station Control</title>
-  </head>
-  <body>
-    <h2>This is the instructor control page to control their created videos and media</h2>
+{% extends "EduMe/base.html" %}
+{% block title %} Channel Control {% endblock %}
 
-  </body>
-</html>
+{% block body_block %}
+<div class="jumbotron">
+  <h1>Instructor Broadcast Station Control</h1>
+
+</div>
+{% endblock %}
