-finished the channel registration form -made 1-to-1 relationship btwn user and profile info
next:
-is the database working when you register an account?
-full system design
-research cloud computing ..?

--- a/templates/EduControl/channel_register.html
+++ b/templates/EduControl/channel_register.html
@@ -3,18 +3,20 @@
 
 {% block body_block %}
 <div class="jumbotron">
-  <h1>this is the registration page for channels</h1>
-
 {% if registered %}
   <h1>Thank you for registering!</h1>
 {% else %}
-  <h1>Please fill out the form:</h1>
+<div class="">
+  <h1>Registration Form</h1>
+
+</div>
+  <h3>Please fill out the form:</h3>
 
   <form enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {{ user_form.as_p }}
     {{ profile_form.as_p }}
-    <input type="submit" name="" value="Register">
+    <input type="submit" name="" value="Submit">
   </form>
   {% endif %}
 </div>
