--- a/templates/InstructorAuthentication/InstructorRegistration.html
+++ b/templates/InstructorAuthentication/InstructorRegistration.html
@@ -6,6 +6,8 @@
   <h1>Registration Form</h1>
   <form method="POST">
     {{form.as_p}}
+    {{ form.errors }}
+    {{ form.non_field_errors }}
     {% csrf_token %}
     <input type="submit" class="btn btn-primary" value="Submit">
   </form>
