+added instructor login page +added "Instructor" button on navbar and linked it to InstructorLandingPage +added "New Instructor" button in the instructor landing page

--- a/templates/EduMe/base.html
+++ b/templates/EduMe/base.html
@@ -18,8 +18,8 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="{% url 'instructor_registration'%}">
-          <button type="button" name="register_btn">New Instructor</button>
+          <a href="{% url 'InstructorAuthentication:instructor_page' %}">
+          <button type="button" name="register_btn">Instructor</button>
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
