+ Updated AUTH_USER_MODEL to the custom User in models.py + Built a custom UserLoginForm(ModelForm) + Customized the clean() for the login form + Fixed the login system. + Fixed the password hashing. + - Might need to try AbstractBaseUser in the model since we only need the authentication functionality - Commented the super().clean() in the clean() as the login fails with it - ModelForm.clean() just enables uniqueness validation and returns self.cleaned_data. Although it is right it ought to be called, it won't fix this issu     - So try def clean_password

--- a/templates/EduMe/base.html
+++ b/templates/EduMe/base.html
@@ -18,8 +18,13 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="{% url 'InstructorAuthentication:instructor_page' %}">
-          <button type="button" name="register_btn">Instructor</button>
+
+          <a href="{% url 'Authentication:login' %}">
+          <button type="button" name="register_btn">Login</button>
+          </a>
+
+          <a href="{% url 'Authentication:new_user' %}">
+          <button type="button" name="register_btn">Register</button>
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
@@ -28,12 +33,12 @@
                     <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
                     <ul class="dropdown-menu dropdown-menu-right mt-1">
                       <li class="p-3">
-                            <form class="form" role="form">
+                            <form method="POST" class="form" role="form">
                                 <div class="form-group">
-                                    <input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
+                                    <input id="username" placeholder="Email" class="form-control form-control-sm" type="text" required="">
                                 </div>
                                 <div class="form-group">
-                                    <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
+                                    <input id="password" placeholder="Password" class="form-control form-control-sm" type="text" required="">
                                 </div>
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-primary btn-block">Login</button>
@@ -45,8 +50,10 @@
                         </li>
                     </ul>
                 </li>
+
             </ul>
           </div>
+
         </nav>
 
         <div class="container">
