--- a/templates/courses/create_course.html
+++ b/templates/courses/create_course.html
@@ -4,12 +4,16 @@
 {% block body_block %}
 <div class="jumbotron">
   <h1>  </h1>
+  {% if request.user.is_authenticated %}
+    {% if user.profile.is_instructor %}
 
-    <form method="POST">
+    <form method="POST" enctype='multipart/form-data'>
       {{new_course_form.as_p}}
       {% csrf_token %}
       <input type="submit" class="btn btn-primary" value="Submit">
     </form>
+    {% endif %}
+  {% endif %}
 
     {% if request.GET.next %}
       <input type="hidden" name="next" value="{{ request.GET.next }}">
