--- a/templates/courses/create_course.html
+++ b/templates/courses/create_course.html
@@ -9,6 +9,7 @@
 
     <form method="POST" enctype='multipart/form-data'>
       {{new_course_form.as_p}}
+      {{section_formset.as_p}}
       {% csrf_token %}
       <input type="submit" class="btn btn-primary" value="Submit">
     </form>
