--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -18,6 +18,7 @@
 
       {% if user.profile.is_instructor %}
       <h1>You're an Instructor???! WOW</h1>
+      <a href="{% url 'courses:list_courses' %}">My Courses</a>
       <a href="{% url 'courses:create_course' %}">New Course</a>
       {% endif %}
 
