--- a/templates/courses/create_course.html
+++ b/templates/courses/create_course.html
@@ -11,7 +11,7 @@
       {{new_course_form.as_p}}
       {{section_formset.as_p}}
       {% csrf_token %}
-      <input type="submit" class="btn btn-primary" value="Submit">
+      <input type="submit" class="btn btn-primary" value="Save">
     </form>
     {% endif %}
   {% endif %}
