+Added functions to create course sections dynamically in create_section.html page -Need to list the sections inside each course edit page -Need to create functions to add contents to sections dynamically as well

--- a/templates/courses/edit_course.html
+++ b/templates/courses/edit_course.html
@@ -10,6 +10,7 @@
     {% if request.GET.next %}
       <input type="hidden" name="next" value="{{ request.GET.next }}">
     {% endif %}
+    <a href="{% url 'courses:create_section' oid=course.id %}">Create a Section</a>
     <input type="submit" class="btn btn-primary" value="Save">
   </form>
 </div>
