--- a/templates/courses/edit_course.html
+++ b/templates/courses/edit_course.html
@@ -3,7 +3,7 @@
 
 {% block body_block %}
 <div class="jumbotron">
-  <h1>Edit Course</h1>
+  <h1>Edit Course Info</h1>
   <form method="POST" enctype='multipart/form-data'>
     {{edit_course_form.as_p}}
     {% csrf_token %}
@@ -13,5 +13,13 @@
     <a href="{% url 'courses:create_section' oid=course.id %}">Create a Section</a>
     <input type="submit" class="btn btn-primary" value="Save">
   </form>
+  <div>
+    <h1>Course Sections</h1>
+    {% for section in sections %}
+    <li><a href="{% url "courses:edit_section" oid=section.id %}">{{section.section_name}}</a></li>
+    {% endfor %}
+  </div>
 </div>
+
+
 {% endblock %}
