+Created view display_catalog +Created base_catalog.html as the base used for displaying catalogs +Created catalog.html to inherit from base_catalog.html +Created urls for display_catalog for three different situation when objects are passed to the url -Make each category displayed in the catalog lead to a page where the subcategories are listed and courses of the category are displayed

--- a/templates/base_catalog.html
+++ b/templates/base_catalog.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% block title %} Home Page {% endblock %}
 
+<!-- This will contain the parts that are common to all catalog display pages -->
 {% block body_block %}
 <div class="jumbotron">
   <h1>HomePage</h1>
+
   <body>
     <div id="content">
      {% block content %}
      {% endblock %}
    </div>
   </body>
+
 </div>
 {% endblock %}
