--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -12,7 +13,7 @@
   <body>
 
           <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-          <a class="navbar-brand" href="">Navbar</a>
+          <a class="navbar-brand" href="{% url 'courses:display_catalog' %}">Navbar</a>
 
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,6 +69,11 @@
 
         <div class="container">
             {% block body_block %}
+            {% endblock %}
+        </div>
+
+        <div class="container">
+            {% block content %}
             {% endblock %}
         </div>
 
