--- a/templates/courses/shop/catalog.html
+++ b/templates/courses/shop/catalog.html
@@ -1,13 +1,20 @@
 {% extends "base_catalog.html" %}
+{% block title %} Home Page {% endblock %}
+
 {% block body_block %}
 {% endblock %}
+
 {% block content %}
     <h3>Categories</h3>
     <ul>
       {% for c in categories %}
       <li>
-        <a href="{% url 'courses:display_catalog_category' category_id=c.id %}">{{c.category}}</a>
+        <a href="{% url 'courses:display_catalog_category' category=c.id  %}">{{c.name}}</a>
       </li>
       {% endfor %}
     </ul>
+
+    <div class="course-list">
+      <h1>{% if category %} {{category.name}} {% else %} Courses {% endif %}</h1>
+    </div>
 {% endblock %}
