--- a/templates/courses/shop/catalog.html
+++ b/templates/courses/shop/catalog.html
@@ -1,20 +1,45 @@
 {% extends "base_catalog.html" %}
+{% load static %}
+
 {% block title %} Home Page {% endblock %}
 
 {% block body_block %}
 {% endblock %}
 
 {% block content %}
-    <h3>Categories</h3>
-    <ul>
+<div class="sidebar">
+  <h3>Categories</h3>
+  <ul>
+    <li><a href="{% url 'courses:display_catalog' %}">All</a></li>
       {% for c in categories %}
-      <li>
-        <a href="{% url 'courses:display_catalog_category' category=c.id  %}">{{c.name}}</a>
-      </li>
+      
+      <li><a href="{% url 'courses:display_catalog_category' category=c.id  %}">{{c.name}}</a></li>
       {% endfor %}
-    </ul>
+
+  </ul>
+</div>
 
     <div class="course-list">
       <h1>{% if category %} {{category.name}} {% else %} Courses {% endif %}</h1>
+      {% for course in courses %}
+        <div class="row">
+
+          <div class="course-card">
+
+            <a href="#">
+              <img src="{% if course.course_picture %}{{course.course_picture.url}} {% endif %}" style="width:100%">
+            </a>
+
+            <h1>{{course.course_name}}</h1>
+            <p class="course-card-price">${{course.course_price}}</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p> <button type="button" name="button">Add to Cart</button> </p>
+          </div>
+
+        </div>
+
+      {% endfor %}
+
     </div>
+
 {% endblock %}
