+Created template for course page (course_page.html +Created view display_course_page() +Created url to display course page -need to figure out the display of course content based on viewer's list of purchases -need to figure out how the display will take place -need to create cart sessions and add courses and checkout

--- a/EduMe/static/css/site.css
+++ b/EduMe/static/css/site.css
@@ -44,6 +44,7 @@
   background-color: #F7F9F9;
   overflow-x: hidden;
   padding-top: 16px;
+  display:grid;
 }
 .sidebar category {
   text-align: center;
@@ -62,4 +63,34 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.second-navbar{
+  display:grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.categories{
+  width: 100%;
+
+}
+.categories button {
+  background-color: #4CAF50; /* Green background */
+  border: 1px solid green; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+}
+.categories button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+.categories:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Add a background color on hover */
+.categories button:hover {
+  background-color: #3e8e41;
 }
