--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-          <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
           <a class="navbar-brand" href="{% url 'courses:display_catalog' %}">Navbar</a>
 
 
@@ -68,6 +68,20 @@
             </ul>
           </div>
         </nav>
+        <nav>
+          <div class="btn-group btn-group-justified">
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary">Apple</button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary">Samsung</button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary">Sony</button>
+            </div>
+          </div>
+        </nav>
+
 
         <div class="container">
             {% block body_block %}
