+Instructor application forms whos up only if it's the first application or previous application was rejected -make sure instructor_application_status variable in the profile model is changed when admins approve or reject an application

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -9,7 +9,7 @@
     {% if request.user.is_authenticated %}
     <ul>
       <li> <a href="{% url "accounts:edit_profile" %}">Profile Info</a> </li>
-      {% if user.profile.is_instructor == 'False' %}
+      {% if user.profile.is_instructor == False %}
       <li> <a href="{% url "accounts:instructor_application" %}">Become an Instructor</a> </li>
       {% endif %}
     </ul>
