+Added submit(), approve(), and reject() functions to InstructorResume model +Modified create_student() function to create an application form (InstructorResume model) only if student is not an instructor. otherwise, if the student is an instructor just retirece the application data to be used for instructor profile info

--- a/templates/accounts/instructor_application.html
+++ b/templates/accounts/instructor_application.html
@@ -4,7 +4,7 @@
 {% block body_block %}
 <div class="jumbotron">
   <h1>Instructor Application</h1>
-  {% if user.show_instructor_application %}
+  {% if user.profile.show_instructor_application %}
     <form method="POST">
       {{form.as_p}}
       {% csrf_token %}
@@ -14,7 +14,7 @@
       <input type="submit" class="btn btn-primary" value="Submit">
     </form>
   {% else %}
-    <h2>You have already submitted an application</h2>
+    <h2>Your application has been submitted! thank you</h2>
   {% endif %}
 </div>
 {% endblock %}
