--- a/templates/courses/edit_content.html
+++ b/templates/courses/edit_content.html
@@ -9,6 +9,7 @@
       {{edit_content_form.as_p}}
         {% csrf_token %}
       <input type="submit" class="btn btn-primary" value="Save">
+      <input type="submit" class="btn btn-primary" name= 'delete' value="Delete Section">
     </form>
 
     {% if request.GET.next %}
