--- a/templates/courses/edit_course.html
+++ b/templates/courses/edit_course.html
@@ -12,6 +12,7 @@
     {% endif %}
     <a href="{% url 'courses:create_section' course_id=course.id %}">Create a Section</a>
     <input type="submit" class="btn btn-primary" value="Save">
+    <input type="submit" class="btn btn-primary" name= 'delete' value="Delete Section">
   </form>
 </div>
 
