--- a/templates/courses/edit_course.html
+++ b/templates/courses/edit_course.html
@@ -4,6 +4,7 @@
 {% block body_block %}
 <div class="jumbotron">
   <h1>Edit Course Info</h1>
+  <h2>{{course.course_name}}</h2>
   <form method="POST" enctype='multipart/form-data'>
     {{edit_course_form.as_p}}
     {% csrf_token %}
@@ -11,7 +12,7 @@
       <input type="hidden" name="next" value="{{ request.GET.next }}">
     {% endif %}
     <a href="{% url 'courses:create_section' course_id=course.id %}">Create a Section</a>
-    <input type="submit" class="btn btn-primary" value="Save">
+    <input type="submit" class="btn btn-primary" name='save' value="Save">
     <input type="submit" class="btn btn-primary" name= 'delete' value="Delete Section">
   </form>
 </div>
