--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
 
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   </head>
   <body>
 
@@ -42,45 +45,11 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
 
-              <li class="dropdown order-1">
-                    <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right mt-1">
-                      <li class="p-3">
-                            <form method="POST" class="form" role="form">
-                                <div class="form-group">
-                                    <input id="username" placeholder="Email" class="form-control form-control-sm" type="text" required="">
-                                </div>
-                                <div class="form-group">
-                                    <input id="password" placeholder="Password" class="form-control form-control-sm" type="text" required="">
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block">Login</button>
-                                </div>
-                                <div class="form-group text-xs-center">
-                                    <small><a href="#">Forgot password?</a></small>
-                                </div>
-                            </form>
-                        </li>
-                    </ul>
-                </li>
-
 
             </ul>
           </div>
         </nav>
-        <nav>
-          <div class="btn-group btn-group-justified">
-            <div class="btn-group">
-              <button type="button" class="btn btn-primary">Apple</button>
-            </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-primary">Samsung</button>
-            </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-primary">Sony</button>
-            </div>
-          </div>
-        </nav>
+
 
 
         <div class="container">
