+created order_created() in tasks.py +created model PromotionCode() +create apply_promo_code() in cart.views +created update_purchase_price() for the model OrderItem +added boolean field course.discounted to prevent the use of promo codes in case a course id discounted by admins +create order when cart is initialized +create OrderItem for every item in cart so we can modify price for coupons -need to separate order from cart

--- a/templates/cart/cart_detail.html
+++ b/templates/cart/cart_detail.html
@@ -60,7 +60,10 @@
         <td><a href="{% url 'courses:display_catalog' %}" class="btn btn-warning"><i class="fa fa-angle-left"></i>Continue Shopping</a></td>
         <td colspan="2" class="hidden-xs"></td>
         <td class="hidden-xs text-center"><strong>Total: <br>SAR {{cart.get_total_price}}</strong> </td>
-        <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i> </a> </td>
+      <form method="POST">
+        <td><a href="{% url 'cart:create_order' %}" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i> </a> </td>
+      </form>
+
       </tr>
     </tfoot>
   </table>
