edited course_page.html and course/views.py..display_course_page() to display the contents of a each section of the desired course

--- a/templates/courses/contents/course_page.html
+++ b/templates/courses/contents/course_page.html
@@ -1,6 +1,16 @@
 {% extends "base_catalog.html" %}
 {% load static %}
-
+<head>
+  <script type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/
+      swfobject/2.2/swfobject.js"></script>
+    <script type="text/javascript">
+      var flashvars = {};
+      var params = {movie:"{{content_item.file.url}}"};
+      swfobject.embedSWF("flash/splayer.swf",
+      "content", "400", "320", "8.0.0",
+      flashvars, params);</script>
+</head>
 {% block title %} Home Page {% endblock %}
 
 {% block body_block %}
@@ -13,6 +23,20 @@
   <h1>{{course.course_name}}</h1>
   <p class="course-card-price">${{course.course_price}}</p>
   <p> <button type="button" name="button">Add to Cart</button> </p>
+</div>
+
+<div class="course-content">
+  <h2>Contents</h2>
+  {% for section in sections %}
+    <h4> {{section.section_name}} </h4>
+    <ul>
+      {% for content in contents %}
+        {% if content.course_section == section%}
+        <a href="#"><li>{{content.title}}</li></a>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  {% endfor %}
 </div>
 
 <div class="course-info">
