--- a/templates/courses/contents/course_page.html
+++ b/templates/courses/contents/course_page.html
@@ -17,9 +17,12 @@
 {% endblock %}
 
 {% block content %}
+
 <video width=600 controls>
 <source src="{{ content_item.video.url }}" type="video/mp4">
 </video>
+<p>{{content_item.video.url}}</p>
+
 <div class="course-card">
     <img src="{% if course.course_picture %}{{course.course_picture.url}} {% endif %}" style="width:100%">
   <h1>{{course.course_name}}</h1>
@@ -34,7 +37,7 @@
       <ul>
         {% for content in contents %}
           {% if content.course_section == section%}
-          <a href="{% url 'courses:course_page_play' content_id=content.id %}"><li>{{content.title}}</li></a>
+            <a href="{% url 'courses:content_play' content_id=content.id %}"><li>{{content.title}}</li></a>
           {% endif %}
         {% endfor %}
       </ul>
