--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -153,7 +153,7 @@
 
 }
 .content-wrap{
-  padding-top: 60px;
+  padding-top: 0px;
   padding-bottom: 60px;
   /* position: relative;   */
   display: flex;
@@ -386,7 +386,14 @@
 .course-card>h3{
   color: white;
 }
-
+.footer{
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 2.4rem;
+  padding-top: 60px;
+  
+}
 .footer-section{
   border-top: 1px solid #093A64;
   height: 165px;
@@ -398,17 +405,42 @@
   padding: 0 0 0 1px;
   transition: all .3s cubic-bezier(0.6,.2,.1,1) 0s;
 }
+
+
+
 .footer-wrap{
   margin-top: 25px;
   display: grid;
   grid-template-columns: repeat(2, 50%);
 }
+
+@media screen and (max-width: 768px){
+  .footer-left-text{
+    display: none;
+
+  }
+}
+
+@media screen and (max-width: 768px){
+  .footer-right-left{
+    display: none;
+
+  }
+}
+@media screen and (max-width: 768px){
+  .footer-right-right-wrapper{
+    display: none;
+
+  }
+}
+
 .footer-left-component{
   margin-left: 100px;
   color: #20A9DE;
 }
 .email-subscribe{
   margin-left: 10px;
+  display: inline;
 }
 
 .footer-right{
@@ -416,14 +448,6 @@
   display: grid;
   grid-template-columns: repeat(2, 50%);
   color: #9D9898;
-}
-.footer{
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 2.4rem;
-  padding-top: 60px;
-  
 }
 
 .footer-bottom{
@@ -537,7 +561,6 @@ body {
   /* margin-right: 100px; */
 }
 
-
 .article-mid{
   position: relative;
   display: inline;
@@ -562,7 +585,8 @@ body {
   display: inline;
   grid-column: 3 / -1;
   overflow: hidden;
-
+  padding: 40px;
+  
 }
 
 .article-entry{
@@ -662,16 +686,23 @@ body {
 
 .share-link{
   margin-bottom: 20px;
+  opacity: 88%;
 }
+@media screen and (max-width: 768px){
+  .about-article{
+    display: none;
 
+  }
+}
 .about-article{
 
   /* border: 1px solid #91013D; */
-  height: 150px;
-  width: 100px;
+  height: auto;
+  width: auto;
   border-radius: 25px;
   position: absolute;
   z-index: 10;
+  opacity: 70%;
 
 }
 
