--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,8 @@
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   -webkit-flex-direction: row;
   -moz-flex-direction: row;
   -ms-flex-direction: row;
@@ -40,6 +41,7 @@
   border-bottom: 1px solid #093A64;
   padding: 0 0 0 15px;
   transition: all .3s cubic-bezier(0.6,.2,.1,1) 0s;
+  overflow: hidden;
 
 }
 .navbar-container{
@@ -85,6 +87,27 @@
     /* background-color: #16043B; */
     /* background-image: linear-gradient(to right, #170932, #200f42, #2b1352, #381662, #451972);
   } */
+
+
+ @media screen and (max-width: 768px){
+
+  .navbar{
+    display: grid;
+    grid-template-columns: 1fr;
+  }  
+
+  .navbar-brand{
+    margin-left: 0px; 
+    text-align: left; 
+    position: absolute;
+  }
+
+  .collapse{
+    display: none;
+  }
+}
+
+
 .navbar-brand{
     margin-left: 85px;
     margin-top: 5px;
@@ -155,16 +178,15 @@
 .content-wrap{
   padding-top: 0px;
   padding-bottom: 60px;
-  /* position: relative;   */
   display: flex;
   width: 100%;
   -webkit-box-pack: center;
   justify-content: center;
   align-items: flex-start;
   flex: 1 1 0%;
-  /* background-color: #093A64; */
-
+  min-height: 100vh;
 }
+
 .content-wrap-media{
   padding-bottom: 140px;
 }
@@ -388,7 +410,6 @@
 }
 .footer{
   position: relative;
-  bottom: 0;
   width: 100%;
   height: 2.4rem;
   padding-top: 60px;
@@ -404,6 +425,8 @@
   border-bottom: 1px solid rgb(19, 14, 16);
   padding: 0 0 0 1px;
   transition: all .3s cubic-bezier(0.6,.2,.1,1) 0s;
+  overflow: hidden;
+
 }
 
 
@@ -462,6 +485,8 @@
   /* background-image: linear-gradient(to right, #170932, #200f42, #2b1352, #381662, #451972); */
   opacity: 0.98;
   padding-top: 10px;
+  overflow: hidden;
+
 
 }
 .footer-bottom-left-wrapper{
@@ -524,6 +549,13 @@ body {
   background-color: #3B0087;
 } */
 
+@media screen and (max-width: 768px){
+  .blog-container{
+    text-align: center;
+
+  }
+}
+
 
 .blog-container{
   display: grid;
@@ -531,8 +563,9 @@ body {
   margin-bottom: 20px;
   margin-top: 15px;
   line-height: 1.6;
-
+  overflow: hidden;
 }
+
 .blog-splitter{
   border-bottom: 1px solid #20A9DE;
   width: 50%;
@@ -540,10 +573,59 @@ body {
   margin-bottom: 20px;
   margin-top: 20px;
 }
+@media screen and (max-width: 768px){
+  .blog-image{
+    position: relative;
+    
+  }
+}
+
+
+@media screen and (max-width: 768px){
+  .blog-info{
+    position: absolute;
+    width: 300px;
+    background-color: #0a001a;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    
+  }
+  .blog-info-topic-wrap{
+    position: absolute;
+    background-color: #0a001a;
+    opacity: 50%;
+    min-width: 400px;
+    min-height: 120px;
+    
+  }
+  .blog-info-description{
+    display: none;
+  }
+  .blog-info-topic{
+    position: absolute;
+    padding-top: 2px;
+    text-align: left;
+    align-content: center;
+    width: 400px;
+    max-height: 120px;
+    max-width: 400px;
+    justify-content: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    overflow: hidden;
+
+  }
+}
+
+.blog-image{
+  text-align: center;
+}
+
 .blog-info{
   max-width: 500px;
   max-height: 200px;
-  margin-left: 20px;
+  margin-left: 0px;
   color: white;
 }
 @media screen and (min-width: 768px){
@@ -587,6 +669,7 @@ body {
   position: relative;
   display: inline;
   grid-column: 2 / -2;
+  /* so when shrink no overlap */
   overflow: hidden;
   padding: 10px;
 
@@ -794,3 +877,11 @@ body {
   margin-top: 20px;
 
 }
+
+.bloglist-wrap{
+  padding-top: 100px;
+  position: relative;
+  /* so when shrink no overlap */
+  overflow: hidden;
+}
+
