--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,13 +32,15 @@
   /* background-color: #91013D; */
   /* background-color: #c4bbcf; */
   /* background: radial-gradient(ellipse at bottom,rgba(14, 92, 160, 1),rgba(9, 58, 100, 1) 40%,#093A64); */
-  background: radial-gradient(ellipse at bottom,rgb(12, 111, 197),rgb(12, 77, 134) 40%,#093A64);
+  /* background: radial-gradient(ellipse at bottom,rgb(12, 111, 197),rgb(12, 77, 134) 40%,#093A64); */
+  background-image: radial-gradient(ellipse at center bottom, rgba(121, 22, 221, 0.7), rgba(59, 0, 135, 0.7) 40%, rgb(59, 0, 135));
+
   opacity: .96;
   /* position: relative; */
   z-index: 300;
   box-shadow: 0 0 30px 5px rgba(0,0,0,.8);
-  /* border-bottom: 1px solid #3B0087; */
-  border-bottom: 1px solid #093A64;
+  border-bottom: 1px solid rgb(40, 0, 135);
+  /* border-bottom: 1px solid #093A64; */
   padding: 0 0 0 15px;
   transition: all .3s cubic-bezier(0.6,.2,.1,1) 0s;
   overflow: hidden;
@@ -114,7 +116,7 @@
     margin-bottom: 20px;
 }
 .nav-link{
-  color: #20A9DE;
+  /* color: #20A9DE; */
 }
 .navbar-header> div{
   padding: 2px;
@@ -138,7 +140,7 @@
 .navbar-footer{
   display: grid;
   /* background-color: Gainsboro; */
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(241, 236, 236);
   /* background-image: linear-gradient(to right, #170932, #200f42, #2b1352, #381662, #451972); */
 
 }
@@ -416,10 +418,11 @@
   
 }
 .footer-section{
-  border-top: 1px solid #093A64;
+  /* border-top: 1px solid #093A64; */
+  border-top: 1px solid #3B0087;
   height: 165px;
-  /* background-color: #3B0087; */
-  background-color: rgb(9, 63, 110);
+  background-color: #3B0087;
+  /* background-color: rgb(9, 63, 110); */
   padding-top: 20px;
   box-shadow: 0 0 30px 5px rgba(0,0,0,.8);
   border-bottom: 1px solid rgb(19, 14, 16);
@@ -883,5 +886,32 @@ body {
   position: relative;
   /* so when shrink no overlap */
   overflow: hidden;
+}
+
+.nav-button-wrap{
+  justify-content: center;
+}
+
+
+/* the navbar button styling */
+.button {
+  /* color: #fff; */
+  color: #f7fafc;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+  border-radius: 13px;
+  font-size: 18px;
+  font-weight: 800;
+  width: 80px;
+  text-align: center;
+  
+}
+.button:hover {
+  /* box-shadow: 0 0 5px 0 #3498db inset, 0 0 2px 2px #3498db; */
+  color: black;
+  background-color:rgb(226, 188, 19);
+  border: 1px #20A9DE;
+  width: 80px;
+  /* width: 100px; */
 }
 
