+moved newsletter form from footer to NewsLetter.js -create <form/> around the form in NewsLetter.js -create handlSubmit() and handleChange()

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -115,9 +115,9 @@
     margin-top: 5px;
     margin-bottom: 20px;
 }
-.nav-link{
-  /* color: #20A9DE; */
-}
+/* .nav-link{
+  color: #20A9DE;
+} */
 .navbar-header> div{
   padding: 2px;
   border-color: black;
